[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/MobSpawner.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 608, 0, 0, 0, 0, 0, 608, 0, 0, 0, 0, 0, 0 )
}

[node name="MobSpawner" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]
SpawnRate = 10.0

[node name="MobTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = true

[node name="MobPath" type="Path2D" parent="." index="1"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 0, -10 )
scale = Vector2( 1, 0.997424 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath" index="0"]

offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]


